[package]
name = "nightfall"
version = "0.3.12-rc4"
authors = ["Valerian G. <valerian.garleanu@pm.me>"]
edition = "2024"
license = "GPL-2.0"
description = "Nightfall is a library allowing on-demand video transcoding and streaming."
repository = "https://github.com/vgarleanu/nightfall"
documentation = "https://docs.rs/nightfall"

[features]
vaapi = ["rusty_vainfo"]
cuda = []
ssa_transmux = []

default = ["cuda", "vaapi"]

[dependencies]
async-trait = "0.1.49"
cfg-if = "1.0.0"
lazy_static = "1.5.0"
mp4 = { git = "https://github.com/ejortega/mp4-rust" }
once_cell = "1.21.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0.57"
thiserror = "2.0"
tokio = { version = "1.47.0", features = [
    "process",
    "io-util",
    "io-std",
    "macros",
    "time",
    "rt",
] }
tokio-stream = { version = "0.1.5", features = ["io-util"] }
tracing = "0.1.29"
uuid = { version = "1.18.0", features = ["v4"] }
xtra = { version = "0.6.0", features = ["tokio", "macros"] }
xtra_proc = { git = "https://github.com/ejortega/xtra_proc.git" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.0", features = ["signal"] }
rusty_vainfo = { version = "0.1.4", optional = true }
sysinfo = "0.37.0"

[target.'cfg(windows)'.dependencies]
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = [
    "winerror",
    "synchapi",
    "minwinbase",
    "processthreadsapi",
] }
